<resources>
    <string name="app_name">EasyCook</string>

    <string name="parse_server_url">https://parseapi.back4app.com/</string>
    <string name="parse_app_id">gXvxW0CWDXAbMXG4Jdu7kiy7s7RucTzQrq4CJ2Xh</string>
    <string name="parse_client_key">QGd4jNLVMsoib2XJptEk6rq7uNrSLhhoJEZBvGuy</string>

    <string name="facebook_app_id">1557747544278181</string>

    <string name="texto_botao_facebook">ENTRAR COM FACEBOOK</string>

    <string name="content_desc_logo">Logo EasyCook</string>

    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>

    <string name="criar_uma_conta">Não tem conta? <u>Cadastre-se!</u></string>

    <string name="progress_carregando">Carregando…</string>
    <string name="botao_sair">Sair</string>
    <string name="entrar">Entrar</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_confirmacao_senha">Confirme a senha</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>

    <string name="validacao_senha">Senhas são diferentes</string>
    <string name="validacao_sexo">Selecione um sexo</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="email_invalido">Email inválido</string>

    <string name="usuario_senha_invalido">Usuário e/ou senha inválido(s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="add_lista">Adicionar Lista</string>
</resources>
